crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__corrupt_pem_variants.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: entries
---
- variant: BadHeader
  has_begin_line: true
  has_end_line: true
  differs_from_original: true
- variant: BadFooter
  has_begin_line: true
  has_end_line: true
  differs_from_original: true
- variant: BadBase64
  has_begin_line: true
  has_end_line: true
  differs_from_original: true
- variant: ExtraBlankLine
  has_begin_line: true
  has_end_line: true
  differs_from_original: true
