crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__ed25519_corrupt_pem_variants.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: results
---
- variant: BadBase64
  differs_from_original: true
- variant: BadHeader
  differs_from_original: true
- variant: BadFooter
  differs_from_original: true
- variant: ExtraBlankLine
  differs_from_original: true
