crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__ed25519_der_lengths.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: result
---
algorithm: Ed25519
private_key_der_len: 83
public_key_der_len: 44
