crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__ed25519_key_sizes.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: result
---
private_der_len: 83
public_der_len: 44
