crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__ed25519_public_pem_shape.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: shape
---
first_line: "-----BEGIN PUBLIC KEY-----"
last_line: "-----END PUBLIC KEY-----"
line_count: 3
total_len: 113
