crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__mismatch_shape.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: result
---
good_public_der_len: 44
mismatched_public_der_len: 44
keys_differ: true
